--- a/index.html
+++ b/index.html
@@ -59,34 +59,34 @@
         }
     </script>
     <!-- docsify的js依赖 -->
-    <script src="lib/docsify.min.js"></script>
+    <script src="./lib/docsify.min.js"></script>
     <!-- emoji表情支持 -->
-    <script src="/lib/emoji.min.js"></script>
+    <script src="./lib/emoji.min.js"></script>
     <!-- 图片放大缩小支持 -->
-    <script src="/lib/zoom-image.min.js"></script>
+    <script src="./lib/zoom-image.min.js"></script>
     <!-- 搜索功能支持 -->
-    <script src="/lib/search.min.js"></script>
+    <script src="./lib/search.min.js"></script>
     <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
-    <script src="/lib/docsify-copy-code.min.js"></script>
+    <script src="./lib/docsify-copy-code.min.js"></script>
     <!-- 侧边栏折叠插件     -->
-    <script src="/lib/docsify-sidebar-collapse.min.js"></script>
+    <script src="./lib/docsify-sidebar-collapse.min.js"></script>
     <!-- 字数统计 -->
-    <script src="/lib/countable.js"></script>
+    <script src="./lib/countable.js"></script>
     <!-- 代码高亮 -->
-    <script src="/lib/prism-java.min.js"></script>
-    <script src="/lib/prism-python.min.js"></script>
-    <script src="/lib/prism-bash.min.js"></script>
-    <script src="/lib/prism-yaml.min.js"></script>
-    <script src="/lib/prism-markup.min.js"></script>
-    <script src="/lib/prism-markdown.min.js"></script>
-    <script src="/lib/prism-sql.min.js"></script>
+    <script src="./lib/prism-java.min.js"></script>
+    <script src="./lib/prism-python.min.js"></script>
+    <script src="./lib/prism-bash.min.js"></script>
+    <script src="./lib/prism-yaml.min.js"></script>
+    <script src="./lib/prism-markup.min.js"></script>
+    <script src="./lib/prism-markdown.min.js"></script>
+    <script src="./lib/prism-sql.min.js"></script>
     <!-- 文章底部显示 下一篇 上一篇 -->
     <!-- <script src="/lib/docsify-pagination.min.js"></script> -->
     <!-- 红心点击特效插件 -->
     <!-- <script src="//cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/js/click_heart.js"></script> -->
     <!-- 回到顶部功能 -->
-    <script src="/lib/jquery.js"></script>
-    <script src="/lib/jquery.goup.js"></script>
+    <script src="./lib/jquery.js"></script>
+    <script src="./lib/jquery.goup.js"></script>
     <script type="text/javascript">
       $(document).ready(function () {
         $.goup({
@@ -99,10 +99,10 @@
       });
     </script>
     <!-- PDFObject.js  -->
-    <script src="/lib/pdfobject.min.js"></script> 
-    <script src="/lib/docsify-pdf-embed.js"></script>
+    <script src="./lib/pdfobject.min.js"></script> 
+    <script src="./lib/docsify-pdf-embed.js"></script>
     <!-- 文档更新时间  -->
-    <script src="/lib/time-updater.min.js"></script>
+    <script src="./lib/time-updater.min.js"></script>
 
 </body>
 
